style rounded corners

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     <!-- Projects Section -->
     <section id="projects" class="bg-projects">
       <div class="container">
-        <div class="row bg-dark">
+        <div class="row bg-dark rounded-4">
           <div class="col-lg-6 col-sm-6 portfolio-item">
-            <div class="card h-100 bg-darker text-light">
+            <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
                 ><img
                   class="card-img-top"
@@ -102,7 +102,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-sm-6 portfolio-item">
-            <div class="card h-100 bg-darker text-light">
+            <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
                 ><img
                   class="card-img-top"
@@ -121,7 +121,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-sm-6 portfolio-item">
-            <div class="card h-100 bg-darker text-light">
+            <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
                 ><img
                   class="card-img-top"
@@ -141,7 +141,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-sm-6 portfolio-item">
-            <div class="card h-100 bg-darker text-light">
+            <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
                 ><img
                   class="card-img-top"
