--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 
     <!-- Welcome Section -->
-    <header class="text-white">
+    <header class="text-white bg-darker">
       <div class="container text-center">
         <h1 style="color: #F79A32">sanjana krishnan</h1>
         <p class="lead">
@@ -165,13 +165,14 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="about" class="bg-darker">
       <div class="container">
-        <div class="row">
+        <div class="row ">
           <div class="col-lg-12 mx-auto">
             <h2 style="color: white;">About me</h2>
             <div class="my-5 clearfix">
-              <div class="float-md-left mb-5 mr-md-4">
+<!-- me-4 for margin end instead of mr for margin right -->
+              <div class="float-start me-4"> 
                 <img
                   class="rounded-circle"
                   src="images/Kutch.jpg"
