--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
             <h3 style="color: white;">Get in touch!</h3>
             <ul class="list-unstyled">
               <li class="">
-                <i class="fa fa-twitter mr-2"></i><a href="https://twitter.com/sanjana_krishn">@sanjana_krishn</a>
+                <i class="fa fa-twitter me-2"></i><a href="https://twitter.com/sanjana_krishn">@sanjana_krishn</a>
               </li>
-              <li class="mr-2">
-                <i class="fa fa-github mr-2"></i><a href="https://github.com/sanjana-krish">sanjana-krishn</a>
+              <li class="me-2">
+                <i class="fa fa-github me-2"></i><a href="https://github.com/sanjana-krish">sanjana-krishn</a>
               </li>
               <li class="">
-                <i class="fa fa-envelope mr-2"></i><a href="#">sanjana.k@uky.edu</a>
+                <i class="fa fa-envelope me-2"></i><a href="#">sanjana.k@uky.edu</a>
               </li>
             </ul>
           </div>
