--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
       <div class="container">
         <div class="row ">
           <div class="col-lg-12 mx-auto">
-            <h2 style="color: white;">About me</h2>
-            <div class="my-5 clearfix">
+            <h2 class="text-light">About me</h2>
+            <div class="my-5 clearfix text-light">
 <!-- me-4 for margin end instead of mr for margin right -->
               <div class="float-start me-4"> 
                 <img
