--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section id="projects" class="bg-projects">
       <div class="container">
         <div class="row bg-dark rounded-4">
-          <div class="col-lg-6 col-sm-6 portfolio-item">
+          <div class="col-lg-6 portfolio-item">
             <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
                 ><img
@@ -101,7 +101,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-sm-6 portfolio-item">
+          <div class="col-lg-6 portfolio-item">
             <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
                 ><img
@@ -120,7 +120,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-sm-6 portfolio-item">
+          <div class="col-lg-6 col-md-6 portfolio-item">
             <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
                 ><img
@@ -140,7 +140,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-sm-6 portfolio-item">
+          <div class="col-lg-6 col-md-6 portfolio-item">
             <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
                 ><img
