--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <div class="col-lg-6 portfolio-item">
             <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
+              data-bs-toggle="modal" data-bs-target="#proj1"
                 ><img
                   class="card-img-top"
                   src="images/bmcelections.png"
@@ -101,6 +102,24 @@
               </div>
             </div>
           </div>
+           <!-- Modal for above card. -->
+          <div class="modal fade" id="proj1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Preview text</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="https://images.freeimages.com/images/small-previews/04e/sunset-1189623.jpg" class="w-100" alt="Preview of map.">
+                        <p>Visit <a href="#">map link</a></p> 
+                    </div>
+                    <!-- <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div> -->
+                </div>
+            </div>
+        </div>
           <div class="col-lg-6 portfolio-item">
             <div class="card h-100 bg-darker text-light rounded-4">
               <a href="#"
