add another css example

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a href="#"
               data-bs-toggle="modal" data-bs-target="#proj1"
                 ><img
-                  class="card-img-top"
+                  class="card-img-top rounded-4 no-b-radius"
                   src="images/bmcelections.png"
                   alt="image shows Mumbai's local body election results map"
               /></a>
